<resources>
    <string name="app_name">QuickSplit</string>
    <string name="txt_name">Nombre</string>
    <string name="txt_lastName">Apellido</string>
    <string name="txt_email">Correo Electrónico</string>
    <string name="txt_password">Contraseña</string>
    <string name="txt_repeatPassword">Repetir Contraseña</string>
    <string name="txt_register">Registrarse</string>
    <string name="lbl_quicksplit">QuickSplit</string>
    <string name="modifyUser">Modificar Usuario</string>
    <string name="saveChanges">Guardar Cambios</string>
    <string name="lbl_register">Registrarse</string>
    <string name="lbl_create">Crear</string>
    <string name="lbl_login">Iniciar Sesión</string>
    <string name="element_text">Element</string>
    <string name="grid_layout_manager">Grid Layout Manager</string>
    <string name="linear_layout_manager">Linear Layout Manager</string>
    <string name="title_purchases">Compras</string>
    <string name="title_friends">Amigos</string>
    <string name="title_groups">Grupos</string>
    <string name="title_settings">Preferencias</string>
    <string name="title_deleteAccount">Borrar Cuenta</string>
    <string name="title_logout">Cerrar Sesión</string>
    <string name="search_hint">Buscar...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_uploadAvatar">Elegir Avatar</string>
    <string name="title_createGroup">Nuevo Grupo</string>
    <string name="title_groupName">Nombre del Grupo</string>
    <string name="title_createPurchase">Nueva Compra</string>
    <string name="title_report">División de Gastos</string>
    <string name="title_modifyPurchase">Modificar Compra</string>
    <string name="modify">Modificar</string>
    <string name="cancel">Cancelar</string>
    <string name="google_maps_API_key">AIzaSyCv61x2spNrmVw3m3Gg4R31NuYr8-UWiHY</string>
    <string name="fetching_data">Recibiendo datos</string>
    <string name="please_wait">Por favor espere...</string>
    <string name="connectivity_error">No podemos conectarnos. Intente verificar la red WiFi o los datos móviles.</string>
    <string name="default_web_client_id">"153663611706-1ufcjs3vfk0030i4fj8h052oklojbc3u.apps.googleusercontent.com"</string>
    <string name="no_register_user">¿No registrado? Registrarse</string>
    <string name="error_add_purchase">Hubo un problema al agregar la compra. Código: </string>
    <string name="error_modify_purchase">Hubo un problema al modificar la compra. Código: </string>
    <string name="error_add_group">Hubo un problema al agregar grupo el grupo. Código:</string>
    <string name="error_modify_group">Hubo un problema al modificar el grupo. Código:</string>
    <string name="error_delete_group">Hubo un problema al borrar el grupo. Código:</string>
    <string name="error_modify_user">Hubo un problema al modificar el usuario. Código:</string>
    <string name="error_delete_account">La cuenta no puede ser borrada si es miembro de grupos o tiene división de gastos pendientes.</string>

</resources>
