<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="104dp"
            android:layout_height="119dp"
            app:srcCompat="@drawable/ic_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="QuickSplit Registro"
            android:textSize="45dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/txt_name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/txtLastName" />

        <EditText
            android:id="@+id/txtLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/txt_lastName"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/txtEmail"
            app:layout_constraintTop_toBottomOf="@+id/txtName" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/txt_email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/txtPassword"
            app:layout_constraintTop_toBottomOf="@+id/txtLastName" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/txt_password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/txtRepeatPassword"
            app:layout_constraintTop_toBottomOf="@+id/txtEmail" />


        <EditText
            android:id="@+id/txtRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/txt_repeatPassword"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txt_register"
            app:layout_constraintTop_toBottomOf="@+id/txtRepeatPassword" />

    </LinearLayout>
</LinearLayout>